k8s/overlays/local/identity/deployment-patch.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: identity
  namespace: jorder
spec:
  template:
    spec:
      containers:
        - name: identity
          imagePullPolicy: Never
